# langchain_sidekick

./: README.md  app.py  pyproject.toml  sidekick.py  sidekick_tools.py
sandbox/: Gender_Equality_and_Women_Empowerment_Essay.txt
